--- a/style.css
+++ b/style.css
@@ -48,14 +48,9 @@ body {
   }
 
 #footer { 
-    font-family: 'Libre Caslon Text', serif;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
+    clear: both;
     font-size: 12px;
-    color:#F24217;
-    text-align: left;
-    background-color: #fbd2d7; 
+
 }  
 
 
