--- a/style.css
+++ b/style.css
@@ -95,5 +95,13 @@ portfoliobody {
     width: 100%;
     padding: 20 px;
   }
+
   
-  
+  .portfolioimg1text {
+      position: absolute;
+      top: 50%;
+      left: 50;
+      transform: translate(-50%, -50%);
+      background-color: #fbd2d7;
+      
+  }
